--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.4.7",
     "@angular/platform-browser-dynamic": "^4.4.7",
     "@angular/router": "^4.4.7",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.7",
     "jquery": "^3.3.1",
     "ng2-file-upload": "^1.3.0",
